// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/TextInput default 1`] = `
<input
  className="sc-htpNat ifcowR"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput error 1`] = `
<input
  className="sc-htpNat dUdimR"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput focus 1`] = `
<input
  className="sc-htpNat fzysqv"
  placeholder="placeholder"
/>
`;
